[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vincent Song <dela.vincent.15@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
env_logger = "0.9"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
