[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vincent Song <dela.vincent.15@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
claim = "0.5"
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
validator = "0.14"
unicode-segmentation = "1"
serde-aux = "3"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]
