[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vincent Song <dela.vincent.15@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]
